Fix Minion Variable Concept Font not showing in all pages.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: "Minion Variable Concept";
+  src: url(multimedia/MinionVariableConcept-Roman.otf);
+}
+
 body {
-  font-family: "Minion Variable Concept", serif;
+  font-family: "Minion Variable Concept";
   font-size: 18px;
   background-color: #EB8C31;
   color: #1A1A29;
